--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer components{
     .navBtn{
-        @apply hidden h-7 md:inline-flex cursor-pointer hover:scale-125 transition-all duration-150 ease-out
+        @apply h-7 md:inline-flex cursor-pointer hover:scale-125 transition-all duration-150 ease-out
     }
 
     .btn{
